{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 322,
  "lineage": "4959d2f2-841d-c92a-7c74-074f99ad79b4",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:225377264925:security-group/sg-00e0287b890d5e307",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-00e0287b890d5e307",
            "ingress": [],
            "name": "sock-shop-cluster-cluster-2024031523343665450000000b",
            "name_prefix": "sock-shop-cluster-cluster-",
            "owner_id": "225377264925",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sock-shop-cluster-cluster",
              "application": "sock-shop-app",
              "environment": "development"
            },
            "tags_all": {
              "Name": "sock-shop-cluster-cluster",
              "application": "sock-shop-app",
              "environment": "development"
            },
            "timeouts": null,
            "vpc_id": "vpc-04170548e4d9c52d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sock-shop-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:225377264925:security-group/sg-0a130d9ada173eb0a",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0a130d9ada173eb0a",
            "ingress": [],
            "name": "sock-shop-cluster-node-2024031523343663180000000a",
            "name_prefix": "sock-shop-cluster-node-",
            "owner_id": "225377264925",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sock-shop-cluster-node",
              "application": "sock-shop-app",
              "environment": "development",
              "kubernetes.io/cluster/sock-shop-cluster": "owned"
            },
            "tags_all": {
              "Name": "sock-shop-cluster-node",
              "application": "sock-shop-app",
              "environment": "development",
              "kubernetes.io/cluster/sock-shop-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-04170548e4d9c52d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sock-shop-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3806570091",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00e0287b890d5e307",
            "security_group_rule_id": "sgr-0c832715b844139ed",
            "self": false,
            "source_security_group_id": "sg-0a130d9ada173eb0a",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.sock-shop-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-292043405",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00e0287b890d5e307",
            "security_group_rule_id": "sgr-074ea1495acf207af",
            "self": false,
            "source_security_group_id": "sg-0a130d9ada173eb0a",
            "timeouts": null,
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.sock-shop-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2642831060",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00e0287b890d5e307",
            "security_group_rule_id": "sgr-018ea5c654c930380",
            "self": false,
            "source_security_group_id": "sg-0a130d9ada173eb0a",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.sock-shop-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2047080882",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a130d9ada173eb0a",
            "security_group_rule_id": "sgr-0a00f9d68598192c4",
            "self": false,
            "source_security_group_id": "sg-00e0287b890d5e307",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.sock-shop-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress all HTTPS to internet",
            "from_port": 443,
            "id": "sgrule-2010980960",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a130d9ada173eb0a",
            "security_group_rule_id": "sgr-0f583478fbc785037",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.sock-shop-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/TCP to internet",
            "from_port": 123,
            "id": "sgrule-2818776958",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a130d9ada173eb0a",
            "security_group_rule_id": "sgr-083b060d4b7f452d8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.sock-shop-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/UDP to internet",
            "from_port": 123,
            "id": "sgrule-3600628339",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0a130d9ada173eb0a",
            "security_group_rule_id": "sgr-0b1be313c964b5cb5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.sock-shop-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1527809438",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a130d9ada173eb0a",
            "security_group_rule_id": "sgr-0ac3d3022801f1fd6",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.sock-shop-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3581347832",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0a130d9ada173eb0a",
            "security_group_rule_id": "sgr-066b1eb8b8ab17f78",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.sock-shop-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-4101954940",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a130d9ada173eb0a",
            "security_group_rule_id": "sgr-0b20050a514f5f959",
            "self": false,
            "source_security_group_id": "sg-00e0287b890d5e307",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.sock-shop-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1120968275",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a130d9ada173eb0a",
            "security_group_rule_id": "sgr-0782c0ee1b79e7d06",
            "self": false,
            "source_security_group_id": "sg-00e0287b890d5e307",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.sock-shop-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1357419364",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a130d9ada173eb0a",
            "security_group_rule_id": "sgr-08b0c3b11795d3006",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.sock-shop-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-4105646219",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0a130d9ada173eb0a",
            "security_group_rule_id": "sgr-001cca5fde4ef940b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.sock-shop-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks_managed_node_group[\"dev\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:225377264925:security-group/sg-085d70d5b7ab1c7fe",
            "description": "EKS managed node group security group",
            "egress": [],
            "id": "sg-085d70d5b7ab1c7fe",
            "ingress": [],
            "name": "dev-eks-node-group-2024031523343675850000000c",
            "name_prefix": "dev-eks-node-group-",
            "owner_id": "225377264925",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-eks-node-group",
              "application": "sock-shop-app",
              "environment": "development"
            },
            "tags_all": {
              "Name": "dev-eks-node-group",
              "application": "sock-shop-app",
              "environment": "development"
            },
            "timeouts": null,
            "vpc_id": "vpc-04170548e4d9c52d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sock-shop-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sock-shop-vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:225377264925:network-acl/acl-0c8bca6b5ac386e0b",
            "default_network_acl_id": "acl-0c8bca6b5ac386e0b",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0c8bca6b5ac386e0b",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "225377264925",
            "subnet_ids": [
              "subnet-049e96eadebe834b6",
              "subnet-07ecc7a7d24fcf570",
              "subnet-080d41b957344e1bb",
              "subnet-0bbe754d69fb92b3d",
              "subnet-0d3b825dfb19f4f3d",
              "subnet-0edbcbd24817b4ca5"
            ],
            "tags": {
              "Name": "sock-shop-vpc-default",
              "kubernetes.io/cluster/sock-shop-cluster": "shared"
            },
            "tags_all": {
              "Name": "sock-shop-vpc-default",
              "kubernetes.io/cluster/sock-shop-cluster": "shared"
            },
            "vpc_id": "vpc-04170548e4d9c52d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sock-shop-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sock-shop-vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:225377264925:route-table/rtb-0a5e5370d4aceff02",
            "default_route_table_id": "rtb-0a5e5370d4aceff02",
            "id": "rtb-0a5e5370d4aceff02",
            "owner_id": "225377264925",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "sock-shop-vpc-default",
              "kubernetes.io/cluster/sock-shop-cluster": "shared"
            },
            "tags_all": {
              "Name": "sock-shop-vpc-default",
              "kubernetes.io/cluster/sock-shop-cluster": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-04170548e4d9c52d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sock-shop-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sock-shop-vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:225377264925:security-group/sg-092210ebf42706c7a",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-092210ebf42706c7a",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "225377264925",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sock-shop-vpc-default",
              "kubernetes.io/cluster/sock-shop-cluster": "shared"
            },
            "tags_all": {
              "Name": "sock-shop-vpc-default",
              "kubernetes.io/cluster/sock-shop-cluster": "shared"
            },
            "vpc_id": "vpc-04170548e4d9c52d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sock-shop-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sock-shop-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09018aea63196ca1d",
            "domain": "vpc",
            "id": "eipalloc-09018aea63196ca1d",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-13-43-107-166.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.43.107.166",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sock-shop-vpc-eu-west-2a",
              "kubernetes.io/cluster/sock-shop-cluster": "shared"
            },
            "tags_all": {
              "Name": "sock-shop-vpc-eu-west-2a",
              "kubernetes.io/cluster/sock-shop-cluster": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.sock-shop-vpc.aws_internet_gateway.this",
            "module.sock-shop-vpc.aws_vpc.this",
            "module.sock-shop-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sock-shop-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:225377264925:internet-gateway/igw-03eceadc809a276d1",
            "id": "igw-03eceadc809a276d1",
            "owner_id": "225377264925",
            "tags": {
              "Name": "sock-shop-vpc",
              "kubernetes.io/cluster/sock-shop-cluster": "shared"
            },
            "tags_all": {
              "Name": "sock-shop-vpc",
              "kubernetes.io/cluster/sock-shop-cluster": "shared"
            },
            "vpc_id": "vpc-04170548e4d9c52d5"
          },
          "dependencies": [
            "module.sock-shop-vpc.aws_vpc.this",
            "module.sock-shop-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sock-shop-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09018aea63196ca1d",
            "association_id": "eipassoc-0e1db9b7f39547126",
            "connectivity_type": "public",
            "id": "nat-0a985da247c558103",
            "network_interface_id": "eni-0f8ea9bf16eae8e62",
            "private_ip": "172.31.85.232",
            "public_ip": "13.43.107.166",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0edbcbd24817b4ca5",
            "tags": {
              "Name": "sock-shop-vpc-eu-west-2a",
              "kubernetes.io/cluster/sock-shop-cluster": "shared"
            },
            "tags_all": {
              "Name": "sock-shop-vpc-eu-west-2a",
              "kubernetes.io/cluster/sock-shop-cluster": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.sock-shop-vpc.aws_eip.nat",
            "module.sock-shop-vpc.aws_internet_gateway.this",
            "module.sock-shop-vpc.aws_subnet.public",
            "module.sock-shop-vpc.aws_vpc.this",
            "module.sock-shop-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sock-shop-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03b4cf36c0bd2d86d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a985da247c558103",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03b4cf36c0bd2d86d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.sock-shop-vpc.aws_eip.nat",
            "module.sock-shop-vpc.aws_internet_gateway.this",
            "module.sock-shop-vpc.aws_nat_gateway.this",
            "module.sock-shop-vpc.aws_route_table.private",
            "module.sock-shop-vpc.aws_subnet.public",
            "module.sock-shop-vpc.aws_vpc.this",
            "module.sock-shop-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sock-shop-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03eceadc809a276d1",
            "id": "r-rtb-0f5f2c722f0fb51b71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f5f2c722f0fb51b7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sock-shop-vpc.aws_internet_gateway.this",
            "module.sock-shop-vpc.aws_route_table.public",
            "module.sock-shop-vpc.aws_vpc.this",
            "module.sock-shop-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sock-shop-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:225377264925:route-table/rtb-03b4cf36c0bd2d86d",
            "id": "rtb-03b4cf36c0bd2d86d",
            "owner_id": "225377264925",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "sock-shop-vpc-private",
              "kubernetes.io/cluster/sock-shop-cluster": "shared"
            },
            "tags_all": {
              "Name": "sock-shop-vpc-private",
              "kubernetes.io/cluster/sock-shop-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-04170548e4d9c52d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.sock-shop-vpc.aws_vpc.this",
            "module.sock-shop-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sock-shop-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:225377264925:route-table/rtb-0f5f2c722f0fb51b7",
            "id": "rtb-0f5f2c722f0fb51b7",
            "owner_id": "225377264925",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "sock-shop-vpc-public",
              "kubernetes.io/cluster/sock-shop-cluster": "shared"
            },
            "tags_all": {
              "Name": "sock-shop-vpc-public",
              "kubernetes.io/cluster/sock-shop-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-04170548e4d9c52d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sock-shop-vpc.aws_vpc.this",
            "module.sock-shop-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sock-shop-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0377e581aecfcf850",
            "route_table_id": "rtb-03b4cf36c0bd2d86d",
            "subnet_id": "subnet-0d3b825dfb19f4f3d"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.sock-shop-vpc.aws_route_table.private",
            "module.sock-shop-vpc.aws_subnet.private",
            "module.sock-shop-vpc.aws_vpc.this",
            "module.sock-shop-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0475817afe6bec4f5",
            "route_table_id": "rtb-03b4cf36c0bd2d86d",
            "subnet_id": "subnet-07ecc7a7d24fcf570"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.sock-shop-vpc.aws_route_table.private",
            "module.sock-shop-vpc.aws_subnet.private",
            "module.sock-shop-vpc.aws_vpc.this",
            "module.sock-shop-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053699f362751de05",
            "route_table_id": "rtb-03b4cf36c0bd2d86d",
            "subnet_id": "subnet-0bbe754d69fb92b3d"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.sock-shop-vpc.aws_route_table.private",
            "module.sock-shop-vpc.aws_subnet.private",
            "module.sock-shop-vpc.aws_vpc.this",
            "module.sock-shop-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sock-shop-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d486c4c2c2af8f5",
            "route_table_id": "rtb-0f5f2c722f0fb51b7",
            "subnet_id": "subnet-0edbcbd24817b4ca5"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.sock-shop-vpc.aws_route_table.public",
            "module.sock-shop-vpc.aws_subnet.public",
            "module.sock-shop-vpc.aws_vpc.this",
            "module.sock-shop-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc8768d11cb20d40",
            "route_table_id": "rtb-0f5f2c722f0fb51b7",
            "subnet_id": "subnet-080d41b957344e1bb"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.sock-shop-vpc.aws_route_table.public",
            "module.sock-shop-vpc.aws_subnet.public",
            "module.sock-shop-vpc.aws_vpc.this",
            "module.sock-shop-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c51d777b8ed8d9a8",
            "route_table_id": "rtb-0f5f2c722f0fb51b7",
            "subnet_id": "subnet-049e96eadebe834b6"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.sock-shop-vpc.aws_route_table.public",
            "module.sock-shop-vpc.aws_subnet.public",
            "module.sock-shop-vpc.aws_vpc.this",
            "module.sock-shop-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sock-shop-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:225377264925:subnet/subnet-0d3b825dfb19f4f3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3b825dfb19f4f3d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "225377264925",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sock-shop-vpc-private-eu-west-2a",
              "kubernetes.io/cluster/sock-shop-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "sock-shop-vpc-private-eu-west-2a",
              "kubernetes.io/cluster/sock-shop-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04170548e4d9c52d5"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.sock-shop-vpc.aws_vpc.this",
            "module.sock-shop-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:225377264925:subnet/subnet-07ecc7a7d24fcf570",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ecc7a7d24fcf570",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "225377264925",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sock-shop-vpc-private-eu-west-2b",
              "kubernetes.io/cluster/sock-shop-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "sock-shop-vpc-private-eu-west-2b",
              "kubernetes.io/cluster/sock-shop-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04170548e4d9c52d5"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.sock-shop-vpc.aws_vpc.this",
            "module.sock-shop-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:225377264925:subnet/subnet-0bbe754d69fb92b3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "172.31.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bbe754d69fb92b3d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "225377264925",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sock-shop-vpc-private-eu-west-2c",
              "kubernetes.io/cluster/sock-shop-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "sock-shop-vpc-private-eu-west-2c",
              "kubernetes.io/cluster/sock-shop-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04170548e4d9c52d5"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.sock-shop-vpc.aws_vpc.this",
            "module.sock-shop-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sock-shop-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:225377264925:subnet/subnet-0edbcbd24817b4ca5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.31.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0edbcbd24817b4ca5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "225377264925",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sock-shop-vpc-public-eu-west-2a",
              "kubernetes.io/cluster/sock-shop-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "sock-shop-vpc-public-eu-west-2a",
              "kubernetes.io/cluster/sock-shop-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04170548e4d9c52d5"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.sock-shop-vpc.aws_vpc.this",
            "module.sock-shop-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:225377264925:subnet/subnet-080d41b957344e1bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.31.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080d41b957344e1bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "225377264925",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sock-shop-vpc-public-eu-west-2b",
              "kubernetes.io/cluster/sock-shop-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "sock-shop-vpc-public-eu-west-2b",
              "kubernetes.io/cluster/sock-shop-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04170548e4d9c52d5"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.sock-shop-vpc.aws_vpc.this",
            "module.sock-shop-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:225377264925:subnet/subnet-049e96eadebe834b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "172.31.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049e96eadebe834b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "225377264925",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sock-shop-vpc-public-eu-west-2c",
              "kubernetes.io/cluster/sock-shop-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "sock-shop-vpc-public-eu-west-2c",
              "kubernetes.io/cluster/sock-shop-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04170548e4d9c52d5"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.sock-shop-vpc.aws_vpc.this",
            "module.sock-shop-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.sock-shop-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:225377264925:vpc/vpc-04170548e4d9c52d5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0c8bca6b5ac386e0b",
            "default_route_table_id": "rtb-0a5e5370d4aceff02",
            "default_security_group_id": "sg-092210ebf42706c7a",
            "dhcp_options_id": "dopt-04ee2305251f0c1cf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04170548e4d9c52d5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a5e5370d4aceff02",
            "owner_id": "225377264925",
            "tags": {
              "Name": "sock-shop-vpc",
              "kubernetes.io/cluster/sock-shop-cluster": "shared"
            },
            "tags_all": {
              "Name": "sock-shop-vpc",
              "kubernetes.io/cluster/sock-shop-cluster": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}